force-app/main/default/objects/Price__c/Price__c.object-meta.xml
<CustomObject>
    <label>Preço</label>
    <nameField>
        <label>Preço Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preços</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>