force-app/main/default/objects/Price__c/fields/Amount_campaigns__c.field-meta.xml
<CustomField>
    <fullName>Amount_campaigns__c</fullName>
    <description>Retorna o valor das campanhas</description>
    <label>Valor das campanhas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>