force-app/main/default/objects/Price__c/fields/Amount_imageRights__c.field-meta.xml
<CustomField>
    <fullName>Amount_imageRights__c</fullName>
    <description>Retorna o valor do direito de imagem</description>
    <label>Valor do direito de imagem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>