force-app/main/default/objects/Price__c/fields/Amount_pieces__c.field-meta.xml
<CustomField>
    <fullName>Amount_pieces__c</fullName>
    <description>Retorna o valor das peças</description>
    <label>Valor das peças</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>