force-app/main/default/objects/Price__c/fields/Amount_total__c.field-meta.xml
<CustomField>
    <fullName>Amount_total__c</fullName>
    <description>Retorna o valor total da proposta</description>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>