force-app/main/default/objects/Price__c/fields/Commercial_policy__c.field-meta.xml
<CustomField>
    <fullName>Commercial_policy__c</fullName>
    <description>Retorna as condições comerciais da última proposta</description>
    <label>Política comercial</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>